# 2m-sem-cw-ds

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: classroom.yml
docs/: dias_mpi.drawio  title.docx  tz.docx  useful.txt
docs/tex/: 02-intro.tex  10-analysis.tex  20-design.tex  30-impl.tex  50-conclusion.tex  bib.bib  report.tex
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.tsx
kubernetes/: ingress.yaml
kubernetes/flights/: Chart.yaml  values.yaml
kubernetes/postgres/: values.yaml
postgres/: 20-create-databases.sh  30-fill-test-DB.sql  40-drop-databases.sql  create-test-db.sh
postgres/scripts/: db-v1.sql
src/: rsa_gen.py
src/GatewayService/: CMakeLists.txt  Dockerfile
src/GatewayService/Configs/: Config.yml
src/GatewayService/NetUI/: AppComponent.hpp  CMakeLists.txt  Constants.hpp  JWTAuth.h  OatppServer.cpp  OatppServer.hpp
src/GatewayService/NetUI/controller/: GatewayController.cpp  GatewayController.hpp
src/GatewayService/NetUI/dto/: BonusDtos.hpp  ErrorsDtos.hpp  FlightDtos.hpp  GatewayDtos.h  IdentityProviderDtos.hpp  TicketDtos.hpp
src/GatewayService/NetUI/producer/: IProducer.h  KafkaProducer.cpp  KafkaProducer.h  producer.py
src/GatewayService/NetUI/service/: BonusService.hpp  FlightService.hpp  IdentityProviderService.hpp  StatisticsService.hpp  TicketService.hpp
src/GatewayService/base/config/: base_sections.h
src/GatewayService/base/exceptions/: logic_exceptions.h
src/GatewayService/cmake/: libs.cmake
src/GatewayService/main/: CMakeLists.txt  main.cpp
(+209 files in other folders)
